--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-color: hsl(225, 100%, 94%);
-    
+    font-family: 'Red Hat Display', sans-serif;
 }
 
 img{
@@ -22,10 +22,15 @@ p{
     left: 50%;
     background-color: white;
     border-radius: 15px;
+    box-shadow: 0px 5px 20px rgb(223, 213, 213);
 }
 .heading{
+    padding: 2rem 0rem 0.25rem 0rem;
     display: flex;
     justify-content: center;
+    font-size: 22px;
+    font-weight: 900;
+    margin: 0px;
     
 }
 .infoContainer{
@@ -37,9 +42,15 @@ p{
     text-align: center;
     margin: 0px;
     padding: 1rem 0;
+    color: hsl(224, 23%, 55%);
     
   
 }
+
+.price{
+ color: hsl(224, 23%, 55%);
+}
+
 .plan{
     list-style-type: none;
     display: flex;
@@ -54,22 +65,36 @@ p{
     border-radius: 10px;
    
 }
+.planName{
+    font-weight: 700;
+}
 
 
 .planList{
     display: flex;
     justify-content: center;
     flex-flow: column;
+    gap: 0.25rem;
 }
 
 .change{
     margin-left: auto;
+    text-decoration: underline;
+    color: blue;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.change:hover{
+    color:rgba(0, 0, 255, 0.4);
+    text-decoration: none;
+    cursor: pointer;
 }
 .options{
 display: flex;
 flex-flow: column;
 justify-content: center;
-gap: 2rem;
+gap: 1.25rem;
 padding: 1rem 0rem;
 }
 
@@ -77,24 +102,31 @@ padding: 1rem 0rem;
 margin: auto;
 background-color: hsl(245, 75%, 52%);
 color: white;
-width: 400px;
+width: 350px;
 height: 40px;
 border-radius: 10px;
 border: 0px;
-font-family: 'Red Hat Display', sans-serif;
 font-weight: 700;
-font-size: 14px
+font-size: 14px;
+box-shadow: 0px 5px 20px rgba(56, 41, 224, 0.4);
 
 }
 
 .cancel{
     border: 0px;
-    color: black;
-    font-family: 'Red Hat Display', sans-serif;
-    font-weight: 400;
+    color: hsl(224, 23%, 55%);
+    font-weight: 700;
     font-size: 14px;
     background-color: white;
+    padding: 1.25rem 0rem;
+  
 }
+
+.cancel:hover{
+    color: black;
+    cursor: pointer;
+}
+
 
 .pay:hover{
     cursor: pointer;
