--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ p{
     left: 50%;
     background-color: white;
     border-radius: 15px;
-    box-shadow: 0px 5px 20px rgb(223, 213, 213);
+    box-shadow: 0px 15px 30px rgba(56, 41, 224, 0.15);
 }
 .heading{
     padding: 2rem 0rem 0.25rem 0rem;
